<resources>
    //MAIN
    <string name="app_name">ProyectoUPV</string>
    <string name="mainBotonInicio">HASIERA</string>
    <string name="mainBotonInicioE">HASIERA</string>
    <string name="mainBotonCreadores">SORTZAILEAK</string>
    <string name="mainBotonCreadoresE">SORTZAILEAK</string>
    <string name="mainTextoVersiones">v0.1</string>
    //CREADORES
    <string name="title_activity_creadores">CreadoresActivity</string>//UPV Leioa
    <string name="creadoresTextoTitulo">ZORTZAILEAK</string>
    <string name="creadoresTextoUpv">UPV Leioa L.H. Magisteritza</string>
    <string name="creadoresTextoTxurdi">FP Txurdinaga multiplataforma goi maila</string>
    //UPV Leioa
    <string name="nombreUpv1">Aiora Aginaga</string>
    <string name="nombreUpv2">Irati Etxebarria</string>
    <string name="nombreUpv3">Amaia Izarzugaza</string>
    <string name="nombreUpv4">Eider Larrabeitia</string>
    <string name="nombreUpv5">Ibai Urrutia</string>
    <string name="nombreUpv6">Lorea Zulaika</string>
    //FP Txurdinaga
    <string name="nombreTxurdi1">Beñat Gonzalez</string>
    <string name="nombreTxurdi2">Ruben Gonzalez</string>
    <string name="nombreTxurdi3">Urko Martinez</string>
    <string name="nombreTxurdi4">Marius Aparaschivei</string>
    //AJUSTES
    <string name="title_activity_ajuempezarstes">AjustesActivity</string>
    <string name="ajustesTextoTitulo">EZARPENAK</string>
    <string name="ajustesTextoTituloE">EZARPENAK</string>
    <string name="ajustesTextoOpcionSonido">Musika</string>
    <string name="ajustesTextoOpcionSonidoE">Musika</string>
    <string name="ajustesTextoOpcionIdioma">hizkuntza</string>
    <string name="ajustesTextoOpcionIdiomaE">hizkuntza</string>
    <string name="ajustesTextoTitulo2">Aukerak</string>
    <string name="ajustesBotonCerrarApp">Irten</string>
    <string name="ajustesBotonCerrarAppE">IRTEN</string>
    //MAPA
    <string name="title_activity_mapa">MapaActivity</string>
    <string name="PunosDistancia"><b>Proximo :</b></string>
    <string name="PuntoProgreso"><b>Descubierto :</b></string>
    <string name="ajustesTextoTitulo2E">AUKERAK</string>
    //POPUP
    <string name="popupBotonJugar">JOLASTU</string>
    <string name="todo">TODO</string>

    <string name="cerrar">Itzi</string>
    <string name="title_activity_juego_puzzle">JuegoPuzzleActivity</string>
    <string name="title_activity_fotos">Argazkiak</string>
    <string name="title_activity_galeria">Galeria</string>
    <string name="title_activity_actividad_2__drag">Actividad_2_Drag</string>
    <string name="title_activity_actividad_3__mercatua">Actividad_3_Mercatua</string>

    <string name="title_activity_actividad_32__prese_aurkez">Actividad_32_PreseAurkez</string>
    <string name="TextoToast1">Hau es da behar indabak egiteko</string>
    <string name="txorizo">txorizo</string>

    <string name="access_token" translatable="false">pk.eyJ1IjoibWFyaXVzaW5mbyIsImEiOiJjam5vOXllZnAxdTA4M3FsN24zZTB1M21wIn0.07lKjNKqi42V_IczzCmsFw</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="coords">Latitud: 00.00 | Longitud: 00.00</string>
    <!--Textp Intro ariketa 1-->
    <string name="Texto101">Orain dela 650 urte gutxi gora behera, Don Tello izeneko kondeak Gernikako hiribildua sortu zuen. Zuen aurrean duzuen gizona da Don Tello. Hiribildua sortzeko “herriaren gutuna”</string>
    >
    <string name="Texto102">idatzi behar izan zuen. Ikus al dezakezue non daukan herriaren gutuna? Horrela bada, atera ezazue selfie bat Don Tello egiten ari den keinua imitatuz paper eta guzti.</string>
    <!--texto Intro ariketa 2-->
    <string name="Texto201">Hara! Heldu zarete Andra Mari elizara. Ikus dezakezuenez erdigunetik oso gertu dago! Erreparatu zein handia den eleiza! 100 urte baino gehiago behar izan zituzten eraikin hau </string>
    <string name="Texto202">osorik bukatzeko! Topatu ahal dezakezue gure inguruko herrietan non dauden eleizak? Mapan aurkituz gero borobildu itzazue! Eta ez ahaztu, bukatutakoan argazkia ateratzea!</string>

    <!--texto Intro ariketa 3-->
    <string name="Texto301">Ummmmm zelako usain ezberdina! Porruak, azenarioak, tomateak, indabak....INDABAK! Gernikako indabak oso famatuak dira! Ba al dakizue ze osagai behar diren indaba plater goxo bat prestatzeko?  Ez badakizue jende ugari batzen da </string>
    <string name="Texto302">astelehenero azokan galdetzeko! Ikertu ze osagai behar diren eta galdetu osagai Azkenean indaba plantera  prestatzeko behar dudan dirua esa beharko didazue ! Joan aurretik, gogoratu zuen argazkiak nahi ditudala!</string>

    <!--texto Intro ariketa 4-->
    <string name="Texto401">Hara, hara...aurrean duzuen eraikin honek ez du gaur egun armak sortzearen antzik, ezta? Hain koloretsua, hain bizia... gaur egun kulturgune bat da, eta bertan hainbat ekintza egiten dira: kontzertuak, </string>
    <string name="Texto402">hitzaldiak, tailerrak, etab. Aurkitu ahal ditzakezue lehengo eraikinaren eta oingo eraikinaren arteko 5 ezberdintasun? Animo eta gogor ekin eta badakizue, zuen argazkiak mesedez!</string>
    <!--texto Intro ariketa 5-->
    <string name="Texto501">Juntetxea Gernikan oso garrantzi handiko tokia izan da beti, izan ere, Mendeetan zehar Gernika izan da Bizkaiko herriak batzartzeko tokia eta bertan Euskal Herriko historian eragin izan duten erabaki asko hartu dira bozkaketa bidez.</string>
    <string name="Texto502">guk gaur ere bozkaketa garrantzitsu bat egingo dugu! Eseri zaitezte borobil erdi horretan ikusten dituzuen eserlekuetan. Honi, hemizikloa deritzo. Bakoitzak, aplikazioa erabiliz zuen gelako asteko ordezkaria aukeratuko duzue.</string>
    <string name="Texto503">Gogoratu, bozkaketak isilpekoak dira, bakoitzak zuen botoa eman eta ez duzue zertan albokoari erakutsi. Hemizikloa ezagutzeko argazkia atera eta erakutsi iezadazue, mesedez.</string>
    <!--texto Intro ariketa 6-->
    <string name="Texto601">Nahiz eta gaur egungoa Gernikako Arbolaren hereniloba izan, Gernikako Arbola ezbairik gabe Euskal Herriko ikur izan da. Alde batetik, bonbardaketaren ondoren zutik dirau zuelako, </string>
    <string name="Texto602">bestetik oraindik gaur egun ere, Lehendakariak bere kargua arbola azpian zin egiten duelako.Baina, ze arbola-mota da Gernikakoa? Hemen dituzue hosto ezberdinak, ondo behatu eta asmatuko duzue!</string>
    <!--texto Intro ariketa 7-->
    <string name="Texto701"> bonbardaketa Euskal Herriko historiaren gertakari garrantzitsuenetarikoa dela. Bonbardaketak,Jakina da, Gernikako ustekabean Gernikako biztanle guztiak harrapatu </string>
    <string name="Texto702">  zituen azoka egun batean. Lehenbiziko bonbak erori zirenean jendeak bere ustez lekurik seguruenetara jo zuen edota, hurbilen zeuzkaten babeslekuetara. Bonbardaketaren bizipena </string>
    <string name="Texto703">ikaragarria izan zen denentzat; beldurra, estutasuna, larrialdia, segurtasunik eza, zalantza eta babesik eza. Gernika guztiz suntsituta gelditu zen! Begira itzazue argazkiak!</string>
    <string name="Texto704">Oso garai gogorrak izan ziren, eta Gernikaz gain beste hainbat leku ere bonbardeatu zituzten. Baina Gernikakoa oso ezaguna da mundu-mailan, margolari ezagun batek "Guernica" </string>
    <string name="Texto705">deitzen zen margolana margoztu zuelako, besteak beste. Artista horren izena, ezagutu nahi baduzue, margolanaren puzzlea ostu beharko duzue! Amaitutakoan atera ezazue azken selfia, mesedez!</string>
    <string name="Texto706">Ba al dakizue, aurrean duzuen margolana ez dela benetazkoa? Benetazkoa Madrilera eraman zuten! Ez al duzue uste hemen egon beharko litzatekeela? Pentsatu ezazue eta gelan esango didazue!</string>

    <string name="arbola601">Nahiz eta gaur egungoa Gernikako Arbolaren hereniloba izan, Gernikako Arbola ezbairik gabe Euskal Herriko ikur izan da. Alde batetik, bonbardaketaren ondoren zutik dirau zuelako, bestetik oraindik gaur egun ere, Lehendakariak bere kargua arbola azpian zin egiten duelako.</string>
    <string name="arbola602">Baina, ze arbola-mota da Gernikakoa? Hemen dituzue hosto ezberdinak, ondo behatu eta asmatuko duzue!</string>
    <string name="galdera2">Bereizten al duzue animaliarik? Eta pertsonarik? Zer uste duzue esan nahiko duela?</string>
    <string name="galdera1">-	Zein da margolan honen autorea?</string>
    <string name="jarraitu">Jarraitu</string>
    <string name="osoondo">Oso Ondo</string>
    <string name="Markina_aurkitu">Aurkitu mapan markinaren elisa</string>
    <string name="title_activity_horidata">Horidata</string>
    <string name="title_activity_sacar_fotos">ArgazkiAtera</string>
    <string name="P1sta1">Zuengandik hurbil, herriko eraikin altuenetarikoa /n dago. Kanpai hotsa entzun dezakegu.</string>
    <string name="mensajePopup">YA HAY UNA PARTIDA INICIADA EN TXURDINAGA, QUIERES CONTINUAR?</string>
    <string name="title_activity_actividad_20__presentacion_andra_mari">Actividad_20_PresentacionAndraMari</string>
    <string name="title_activity_actividad_21__encontrar_iglesia">Actividad_21_EncontrarIglesia</string>

    <string name="title_activity_actividad_5__presentacion_botaketa">
        Actividad_5_PresentacionBotaketa
    </string>
    <string name="title_activity_actividad_51__botaketa">Actividad_51_Botaketa</string>
    <string name="Asier">Asier</string>
    <string name="Maialen">Maialen</string>
    <string name="Jon">Jon</string>
    <string name="Garikoitz">Garikoitz</string>
    <string name="Miren">Miren</string>
    <string name="Ander">Ander</string>
    <string name="Ekaitz1">Ekaitz</string>
    <string name="Nahia">Nahia</string>
    <string name="Eneko">Eneko</string>
    <string name="Unai">Unai</string>
    <string name="Markel">Markel</string>
    <string name="Ane">Ane</string>
    <string name="Mikel">Mikel</string>
    <string name="Aitor">Aitor</string>
    <string name="Irati">Irati</string>
    <string name="Mikela">Mikela</string>
    <string name="Ekaitz2">Ekaitz</string>
    <string name="Itxaro">Itxaro</string>
    <string name="Naroa">Naroa</string>
    <string name="Xabi">Xabi</string>
    <string name="Maider">Maider</string>
    <string name="Geanina">Geanina</string>
    <string name="OrdescariarenIzena">Ordescariaren Izena</string>
    <string name="title_activity_actividad_52__resultados">Actividad_52_Resultados</string>

</resources>
