<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjustesActivity">

    <Button
        android:id="@+id/idBtnAjustesCerrar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/cerrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="117dp"
        android:layout_height="41dp"

        android:layout_marginEnd="20dp"
        android:text="@string/ajustesTextoOpcionIdioma"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="169dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="34dp"
        android:layout_height="24dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/eus"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        tools:layout_editor_absoluteY="179dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/ajustesTextoTitulo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/ajustesTextoTitulo2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="256dp" />

    <Button
        android:id="@+id/idBtnAjustesCreadores"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/mainBotonCreadores"
        app:layout_constraintBottom_toTopOf="@+id/idBtnAjustesSalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.571" />

    <Button
        android:id="@+id/idBtnAjustesSalir"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ajustesBotonCerrarApp"
        app:layout_constraintBottom_toTopOf="@+id/idBtnAjustesCerrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.753" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="98dp"
        android:layout_height="40dp"
        android:fontFamily="sans-serif"

        android:text="Soinua"
        android:textAllCaps="false"
        android:textOff="Itzalita"
        android:textOn="Piztuta"
        android:textSize="24sp"
        android:switchMinWidth="100sp"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="112dp" />

</android.support.constraint.ConstraintLayout>